--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: pt-BR
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: America/Sao_Paulo
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Daniel Nunes # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Blog criado com o intuito de trocar conhecimento com a comunidade e apoiar meu aprendizado. Aqui, você encontrará posts sobre segurança da informação, Linux, etc. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://nunesdaniel.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: nunesdaniel # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
