--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Daniel Nunes # the main title
 tagline: Blog criado com o intuito de trocar conhecimento com a comunidade e apoiar meu aprendizado. Aqui, você encontrará posts sobre segurança da informação, Linux, etc. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Blog criado com o intuito de trocar conhecimento com a comunidade e apoiar meu aprendizado. Aqui, você encontrará posts sobre segurança da informação, Linux, etc.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -88,7 +88,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: # [light | dark]
+theme_mode: dark # [light | dark]
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
