--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ theme_mode: dark # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://github.com/nunesdaniel/nunesdaniel.github.io/blob/main/assets/my-picture.jpg
+avatar: https://nunesdaniel.github.io/assets/img/profile/picture.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
